package Messages;

message FirstContact 
{
	required uint32 magicId = 1;
	required string clientString = 2;
}

message FirstResponse
{
	enum SERVICE {
		CLIENT			= 0;
		DWM_SHARED		= 1;
		DWM_DEDICATED	= 2;
	};
	required SERVICE service = 1;

}